--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "php": ">=7.4 || ^8.0",
         "symfony/framework-bundle": "^5.4 | ^6 || ^7",
         "symfony/messenger": "^5.4 | ^6 || ^7",
-        "yiisoft/yii2": "2.0.52"
+        "yiisoft/yii2": "^2.0"
     },
     "require-dev": {
         "yidas/yii2-composer-bower-skip": "^2.0",
