--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "phpstan/phpstan": "^2.1",
         "phpstan/phpstan-phpunit": "^2.0",
         "squizlabs/php_codesniffer": "^3.12",
-        "phpstan/phpstan-symfony": "^2.0"
+        "phpstan/phpstan-symfony": "^2.0",
+        "slevomat/coding-standard": "~8.0"
     },
     "autoload": {
         "psr-4": {
@@ -40,11 +41,13 @@
     },
     "config": {
         "allow-plugins": {
-            "yiisoft/yii2-composer": true
+            "yiisoft/yii2-composer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
     },
     "scripts": {
         "phpcs": "@php vendor/bin/phpcs src/",
+        "phpcs-fix": "@php vendor/bin/phpcbf src/",
         "phpstan": "@php vendor/bin/phpstan analyse src/ tests/ -c phpstan.neon.php --no-progress --memory-limit 512M",
         "test": "@php vendor/bin/phpunit --testdox --no-interaction"
     }
