--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ruleset name="Yii2">
+<ruleset name="yii2-bridge-coding-style">
+    <description>yii2-bridge coding style</description>
     <rule ref="PSR12" />
 
-    <!-- display progress -->
-    <arg value="p"/>
+    <rule ref="SlevomatCodingStandard.Namespaces.AlphabeticallySortedUses"/>
+    <rule ref="SlevomatCodingStandard.Namespaces.MultipleUsesPerLine"/>
+    <rule ref="SlevomatCodingStandard.Namespaces.UseDoesNotStartWithBackslash"/>
+    <rule ref="SlevomatCodingStandard.TypeHints.DeclareStrictTypes">
+        <properties>
+          <property name="spacesCountAroundEqualsSign" type="int" value="0" />
+        </properties>
+    </rule>
+    <rule ref="SlevomatCodingStandard.TypeHints.ReturnTypeHintSpacing"/>
+
     <!-- Show error codes -->
     <arg value="s"/>
     <arg name="colors"/>
