--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
     "name": "asaliev/symfony-yii2-bridge",
-    "version": "0.1.1",
+    "version": "0.2.0",
     "type": "symfony-bundle",
     "homepage": "https://github.com/asaliev/symfony-yii2-bridge",
     "keywords": [
         "symfony",
+        "symfony-bundle",
         "yii2"
     ],
     "license": "MIT",
@@ -15,8 +16,12 @@
     ],
     "require": {
         "php": ">=7.4 || ^8.0",
-        "symfony/framework-bundle": "^5.4 | ^6 || ^7",
+        "symfony/config": "^5.4 | ^6 || ^7",
+        "symfony/dependency-injection": "^5.4 | ^6 || ^7",
+        "symfony/event-dispatcher": "^5.4 | ^6 || ^7",
+        "symfony/http-kernel": "^5.4 | ^6 || ^7",
         "symfony/messenger": "^5.4 | ^6 || ^7",
+        "symfony/routing": "^5.4 | ^6 || ^7",
         "yiisoft/yii2": "^2.0"
     },
     "require-dev": {
@@ -43,7 +48,8 @@
         "allow-plugins": {
             "yiisoft/yii2-composer": true,
             "dealerdirect/phpcodesniffer-composer-installer": true
-        }
+        },
+        "sort-packages": true
     },
     "scripts": {
         "phpcs": "@php vendor/bin/phpcs src/",
