--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,3 +36,10 @@ jobs:
         run: composer phpstan
       - name: PHPUnit
         run: composer test
+      - name: Upload coverage to Codecov
+        if: success() && matrix.php-version == '8.3'
+        uses: codecov/codecov-action@v4
+        with:
+          files: ./build/logs/clover.xml
+          fail_ci_if_error: true
+          token: ${{ secrets.CODECOV_TOKEN }} # only needed for private repos
